--- a/backend/API/docker-compose.yml
+++ b/backend/API/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: 12345
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ../../data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
