Updated UI, added images and page with details for dishes

--- a/backend/API/appsettings.Development.json
+++ b/backend/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DishesDbContext" : "User ID=root;Password=12345;Host=localhost;Port=5432;Database=DishesDb;"
-  }
+  },
+  "ApiUrl": "http://localhost:5147/"
 }
